# njupt_always_in_dorm

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
src/njupt_always_in_dorm/: __main__.py  njupt_check_in.py  njupt_sso.py  swms_base64.py
